--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -46,28 +46,31 @@ html(lang='en')
                             a.navbarLink.nav-link(href='past_events') Past Events
                         |
 
+                        if (isAuthenticated)
+                            .d-none.d-xl-block
+                                li.nav-item.dropdown
+                                    a.nav-link.dropdown-toggle.me-3(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
+                                        | Account
+                                    ul.dropdown-menu.dropdown-menu.end.dropdown-menu-lg-start
+                                        li
+                                            a.dropdown-item(href='/dashboard') Dashboard
+                                        li
+                                            hr.dropdown-divider
+                                        li
+                                            a.dropdown-item(href='/logout') Logout
 
-                        .d-none.d-xl-block
-                            li.nav-item.dropdown
-                                a.nav-link.dropdown-toggle.me-3(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
-                                    | Account
-                                ul.dropdown-menu.dropdown-menu.end.dropdown-menu-lg-start
-                                    li
-                                        a.dropdown-item(href='/dashboard') Dashboard
+                            .d-lg-block.d-xl-none
+                                li.nav-item.dropdown
                                     li
                                         hr.dropdown-divider
-                                    li
-                                        a.dropdown-item(href='/logout') Logout
-
-                        .d-lg-block.d-xl-none
-                            li.nav-item.dropdown
-                                li
-                                    hr.dropdown-divider
-                                li.nav-item
-                                    a.navbarLink.nav-link(href='/dashboard') Dashboard
-                                |
-                                li.nav-item
-                                    a.navbarLink.nav-link(href='/logout') Logout
+                                    li.nav-item
+                                        a.navbarLink.nav-link(href='/dashboard') Dashboard
+                                    |
+                                    li.nav-item
+                                        a.navbarLink.nav-link(href='/logout') Logout
+                        else
+                            li.nav-item
+                                a.navbarLink.nav-link(href='/dashboard') Login
 
                     .d-flex.d-none.d-xl-block
                         a#mlh-trust-badge(style='display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000', href='https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2023-season&utm_content=blue', target='_blank')
