--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -304,9 +304,15 @@ html
                 .col-lg-8.m-3
                     label.form-label(for='github') Github
                     input#github(type="url" class='form-control' placeholder='Github' pattern=".*\.github\..*")
+
+                    .invalid-feedback
+                        | Ensure this is a Github link
                 .col-lg-8.m-3
                     label.form-label(for='linkedin') LinkedIn
                     input#linkedin(type="url" class='form-control' placeholder='LinkedIn' pattern=".*\.linkedin\..*")
+
+                .invalid-feedback
+                        | Ensure this is a Linkedin link
 
                 hr
                 .col-lg-8.m-3
