--- a/src/views/hardware_items.pug
+++ b/src/views/hardware_items.pug
@@ -35,7 +35,7 @@ html
                                 label(for='floatingCount') Link
                             // Category
                             select.form-select.mb-3(aria-label='Select Category' name='category')
-                                option(selected='' disabled='') Select Category
+                                option(selected disabled) Select Category
                                 option(value='building parts') building parts
                                 option(value='cables') cables
                                 option(value='general') general
