--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -1,77 +1,58 @@
-doctype html
-html(lang='en')
-    head
-        title  YCP Hacks
-        meta(name='viewport', content='width=device-width, initial-scale=1')
-        link(rel='icon', type='image/x-icon', href='/static/images/favicon.png')
-        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css', rel='stylesheet', integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD', crossorigin='anonymous')
-        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js', integrity='sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN', crossorigin='anonymous')
-        link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
-        link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=MuseoModerno')
-        link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Sora')
+nav.navbar.navbar-expand-xl
+    .container-fluid
 
-        link(rel='stylesheet', href='/static/stylesheets/navbar.css')
+        a.navbar-brand.text-white(href='/' aria-label='Home' tabindex='-1')
+            //#desktopHeader
+            .me-2.d-inline-block
+                img(src='/static/images/fountain_white.png', alt='ycp_fountain', width='auto', height='25')
+                a.replaceText.text-decoration-none#style-2(href='/', data-replace='Home' aria-label='Home')
+                    span YCP Hacks
 
-        script(src='https://kit.fontawesome.com/5aea80cc0d.js', crossorigin='anonymous')
+        button.navbar-toggler.bg-light(type='button', data-bs-toggle='collapse', data-bs-target='#navbarTogglerDemo01', aria-controls='navbarTogglerDemo01', aria-expanded='false', aria-label='Toggle navigation')
+            span.navbar-toggler-icon
 
-
-    body
-
-        nav.navbar.navbar-expand-xl
-            .container-fluid
-
-                a.navbar-brand.text-white(href='/' aria-label='Home' tabindex='-1')
-                    //#desktopHeader
-                    .me-2.d-inline-block
-                        img(src='/static/images/fountain_white.png', alt='ycp_fountain', width='auto', height='25')
-                        a.replaceText.text-decoration-none#style-2(href='/', data-replace='Home' aria-label='Home')
-                            span YCP Hacks
-
-                button.navbar-toggler.bg-light(type='button', data-bs-toggle='collapse', data-bs-target='#navbarTogglerDemo01', aria-controls='navbarTogglerDemo01', aria-expanded='false', aria-label='Toggle navigation')
-                    span.navbar-toggler-icon
-
-                #navbarTogglerDemo01.collapse.navbar-collapse
+        #navbarTogglerDemo01.collapse.navbar-collapse
 
 
 
-                    ul.navbar-nav.me-auto.mb-2.mb-lg-0
-                        li.nav-item
-                            a.navbarLink.nav-link(href='gallery') Gallery
-                        |
-                        li.nav-item
-                            a.navbarLink.nav-link(href='judging_criteria') Judging Criteria
-                        |
+            ul.navbar-nav.me-auto.mb-2.mb-lg-0
+                li.nav-item
+                    a.navbarLink.nav-link(href='gallery') Gallery
+                |
+                li.nav-item
+                    a.navbarLink.nav-link(href='judging_criteria') Judging Criteria
+                |
 
-                        li.nav-item
-                            a.navbarLink.nav-link(href='past_events') Past Events
-                        |
+                li.nav-item
+                    a.navbarLink.nav-link(href='past_events') Past Events
+                |
 
-                        if (isAuthenticated)
-                            .d-none.d-xl-block
-                                li.nav-item.dropdown
-                                    a.nav-link.dropdown-toggle.me-3(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
-                                        | Account
-                                    ul.dropdown-menu.dropdown-menu.end.dropdown-menu-lg-start
-                                        li
-                                            a.dropdown-item(href='/dashboard') Dashboard
-                                        li
-                                            hr.dropdown-divider
-                                        li
-                                            a.dropdown-item(href='/logout') Logout
+                if (isAuthenticated)
+                    .d-none.d-xl-block
+                        li.nav-item.dropdown
+                            a.nav-link.dropdown-toggle.me-3(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
+                                | Account
+                            ul.dropdown-menu.dropdown-menu.end.dropdown-menu-lg-start
+                                li
+                                    a.dropdown-item(href='/dashboard') Dashboard
+                                li
+                                    hr.dropdown-divider
+                                li
+                                    a.dropdown-item(href='/logout') Logout
 
-                            .d-lg-block.d-xl-none
-                                li.nav-item.dropdown
-                                    li
-                                        hr.dropdown-divider
-                                    li.nav-item
-                                        a.navbarLink.nav-link(href='/dashboard') Dashboard
-                                    |
-                                    li.nav-item
-                                        a.navbarLink.nav-link(href='/logout') Logout
-                        else
+                    .d-lg-block.d-xl-none
+                        li.nav-item.dropdown
+                            li
+                                hr.dropdown-divider
                             li.nav-item
-                                a.navbarLink.nav-link(href='/dashboard') Login
+                                a.navbarLink.nav-link(href='/login') Dashboard
+                            |
+                            li.nav-item
+                                a.navbarLink.nav-link(href='/logout') Log out
+                else
+                    li.nav-item
+                        a.navbarLink.nav-link(href='/login') Log in
 
-                    .d-flex.d-none.d-xl-block
-                        a#mlh-trust-badge(style='display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000', href='https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2023-season&utm_content=blue', target='_blank')
-                            img.mlh-logo(src='https://s3.amazonaws.com/logged-assets/trust-badge/2023/mlh-trust-badge-2023-blue.svg', alt='Major League Hacking 2023 Hackathon Season', style='width:100%')
+            .d-flex.d-none.d-xl-block
+                a#mlh-trust-badge(style='display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000', href='https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2023-season&utm_content=blue', target='_blank')
+                    img.mlh-logo(src='https://s3.amazonaws.com/logged-assets/trust-badge/2023/mlh-trust-badge-2023-blue.svg', alt='Major League Hacking 2023 Hackathon Season', style='width:100%')
