--- a/src/views/http_404.pug
+++ b/src/views/http_404.pug
@@ -1,4 +1,7 @@
 extends layout
 
 block content
-  p This is the content.
+    .centered.text-center
+        .display-1 404
+        hr
+        .display-5 Looks like we can't find the page you're looking for!
