--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,6 +1,16 @@
 doctype html
 html
-  head
-
-  body
-    block content
+    head
+        title  YCP Hacks
+        meta(name='viewport', content='width=device-width, initial-scale=1')
+        link(rel='icon', type='image/x-icon', href='/static/images/favicon.png')
+        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css', rel='stylesheet', integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD', crossorigin='anonymous')
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js', integrity='sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN', crossorigin='anonymous')
+        link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+        link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=MuseoModerno')
+        link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Sora')
+        script(src='https://kit.fontawesome.com/5aea80cc0d.js', crossorigin='anonymous')
+        link(rel='stylesheet', href='/static/stylesheets/404.css')
+    body
+        block content
+            .hehe.centered default
