--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,6 +1,236 @@
-//- CLIENT INDEX VIEW TEMPLATE
+extends layout/layout
 
-extends layout
+block append styles
+    link(rel='stylesheet', type='text/css', href='/static/stylesheets/welcome_page.css')
 
-block content
-  p This is the content.
+block main
+
+    svg.svg(viewbox='0 0 300 300')
+        path.path(fill='none', stroke='white', stroke-width='0.2', d='M0,0Q6.759098,89.428076,82.668977,89.948007c75.909879.519931,78.509532,31.71577,90.987868,60.051992q12.478336,28.336222,44.194106,35.09532')
+    svg.svg(viewbox='0 0 300 300')
+        path.path(fill='none', stroke='white', stroke-width='0.2', d='M0,0Q8.158033,134.791582,84.067912,135.311513c75.909879.519931,74.212797-24.103302,109.099155,0q34.886358,24.103302,67.869823,71.675608')
+
+    img.alien(src='static/assets/alien2.png')
+
+    .intro.d-flex.flex-column
+        .text-center.d-flex.flex-column.p-4
+            .ycpHeader YCP Hacks
+            h2.hacks.insides Fall 2023
+            h3.text-white.insides Willman Business Center
+        a.introButtons.m-1(href='/dashboard') Register Now!
+        p
+            // TODO: possible change
+            a.introButtons.m-1(href='/') Discord
+            // TODO: sponsor page
+            a.introButtons.m-1(href='/sponsor') Sponsor Us
+        // TODO: implement smooth scrolling
+        a(href='#jump' tabindex='-1' aria-label='jump to content')
+            i.fa-solid.fa-chevron-down.scrollDown(style='color: white;' )
+
+    hr#jump
+
+    .insides.text-container.m-5
+        .row.m-0.d-flex.align-items-center
+            .col-md-8
+                .hacks.text-white
+                    u what is hackathon?
+                p
+                    | Conveniently nestled in the middle of rural Pennsylvania, YCP Hacks is a
+                    | college level hackathon with small town charm.
+                    br
+                    | An hour north of Baltimore, an hour and a
+                    | half from Philadelphia, and 2 hours from Penn State places it right in the middle of
+                    | Pennsylvania Dutch Country (presumably made of funnel cake). The event is set on the
+                    | charming York College of Pennsylvania campus, with all the facilities, people and
+                    | camaraderie that comes with it.
+                    br
+                    | Our mission is to promote technical knowledge,
+                    | innovation, and entrepreneurship in York and beyond, and we just can't wait to see
+                    | what you do next.
+            .col-md-4
+                img.img2(src='/static/images/Presentation.png' alt='Presentation')
+
+    .margin.p-2
+        h1.display-5.mt-5 Schedule
+        .container.p-3.shadow
+            ul#myTab.nav.nav-tabs.nav-justified(role='tablist')
+                li.nav-item(role='presentation')
+                    button#fri-tab.nav-link.link-dark.active(data-bs-toggle='tab', data-bs-target='#fri-tab-pane', type='button', role='tab', aria-controls='fri-tab-pane', aria-selected='true') Friday
+                li.nav-item(role='presentation')
+                    button#sat-tab.nav-link.link-dark(data-bs-toggle='tab', data-bs-target='#sat-tab-pane', type='button', role='tab', aria-controls='sat-tab-pane', aria-selected='false') Saturday
+                li.nav-item(role='presentation')
+                    button#sun-tab.nav-link.link-dark(data-bs-toggle='tab', data-bs-target='#sun-tab-pane', type='button', role='tab', aria-controls='sun-tab-pane', aria-selected='false') Sunday
+            #myTabContent.tab-content
+                #fri-tab-pane.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='home-tab', tabindex='0')
+                    - const friday = [["Event","1000","Business Center"],["Event","1000","Business Center"],["Event","1000","Business Center"],["Event","1000","Business Center"]];
+                    table.table.table-striped
+                        thead
+                            tr
+                                th(scope='col') Event
+                                th(scope='col') Time
+                                th(scope='col') Location
+                        tbody
+                            each item of friday
+                                tr
+                                    each value of item
+                                        td(style="width: 5px;")=value
+
+                #sat-tab-pane.tab-pane.fade(role='tabpanel', aria-labelledby='profile-tab', tabindex='0')
+                    - const saturday = [["Event","1000","Business Center"],["Event","1000","Business Center"],["Event","1000","Business Center"],["Event","1000","Business Center"]];
+                    table.table.table-striped
+                        thead
+                            tr
+                                th(scope='col') Event
+                                th(scope='col') Time
+                                th(scope='col') Location
+                        tbody
+                            each item of saturday
+                                tr
+                                    each value of item
+                                        td(style="width: 5px;")=value
+                #sun-tab-pane.tab-pane.fade(role='tabpanel', aria-labelledby='contact-tab', tabindex='0') ...
+
+    mixin link1(name,text, id)
+        .accordion-item
+            h2.accordion-header
+                button.accordion-button.collapsed&attributes({'data-bs-target': '#' + id})(type='button', data-bs-toggle='collapse')= name
+            .accordion-collapse.collapse&attributes({'id': id})(data-bs-parent='#accordionExample')
+                .accordion-body= text
+    mixin link2(name,text, id)
+        .accordion-item
+            h2.accordion-header
+                button.accordion-button.collapsed&attributes({'data-bs-target': '#' + id})(type='button', data-bs-toggle='collapse')= name
+            .accordion-collapse.collapse&attributes({'id': id})(data-bs-parent='#accordionExample1')
+                .accordion-body= text
+    h1.display-5.mt-5 FAQ
+    .elementSize.row.row-cols-md-2.mx-4.row-cols-sm-1
+        .col
+            #accordionExample.accordion
+                // each name, text in {'What is a hackathon?': 'A 36 hour event where you work together with a team to make something awesome. You don\'t need to know how to code or be a supreme hacker, just how to be creative! You can also get help from our mentors and speakers who will be attending.'}
+                +link1('What is a hackathon? 🤖 ', "A 36 hour event where you work together with a team to make something awesome. You do not need to know how to code or be a supreme hacker, just how to be creative! You can also get help from our mentors and speakers who will be attending.", 1)
+                +link1('Can I come? 😄', "We'll take any college student from anywhere on earth! We sadly cannot accept students under the age of 18. All students from outside of York College may be asked to attend online if Covid protocols change", 2)
+                +link1("Where is this going to be? 🌎", "The Willman Business Center of York College! There will be free parking in the adjacent lot for the entire weekend.", 3)
+                +link1("When will this be? 📅", "XXX", 4)
+                +link1("Why? 😯", "Learn new things, meet new people, and tons of free food and swag.", 5)
+                +link1("Will you reimburse travel? 💰", "If we get enough sponsors this season, we may offer it closer to the event date. At this time we cannot confirm it though. Apply and we'll email our applicants with more information as it becomes available.", 6)
+        .col
+            #accordionExample1.accordion
+                +link2("I don't have a team so.... 🤷", "Well you're in luck! We have tons of team building activities if you don't have a team to come with you. You can also work alone if you'd like.", 7)
+                +link2("But I can't code! 💻", "We'll have tons of great workshops and mentors to help you learn and build something amazing!", 8)
+                +link2("How much does it cost? 💸", "Nothing! Registration is free and food will be provided for you. And of course, swag is free too.", 9)
+                +link2("Will there be hardware available? ⚙ ", "Yes! Hardware will be provided such as, building parts, cables, general, kits, microcontrollers, etc.", 10)
+                +link2("What should I bring? 🎒", "ID, Clothing, sleeping bag, and any necessary tech (and chargers). And deodorant. Please.", 11)
+                +link2("Do I keep my Intellectual Property? 🧠", "Yes! Participants retain 100% of the intellectual property that they create during the event.", 12)
+
+            //+link("Are there any rules?", "You can find the MLH code of conduct" + a.primary-link(href='https://static.mlh.io/docs/mlh-code-of-conduct.pdf') here!, 13)
+            //+link("", "", 10)
+
+        //            h2#headingFourteen.accordion-header
+        //                button.accordion-button.collapsed(type='button', data-bs-toggle='collapse', data-bs-target='#collapseFourteen', aria-expanded='false', aria-controls='collapseFourteen')
+        //                    .icon 📜
+        //                    | Are there any rules?
+        //            #collapseFourteen.accordion-collapse.collapse(aria-labelledby='headingFourteen', data-bs-parent='#accordionExample1')
+        //                .accordion-body
+        //                    |  You can find the MLH code of conduct&nbsp
+        //                    a.primary-link(href='https://static.mlh.io/docs/mlh-code-of-conduct.pdf') here!
+        //        .accordion-item
+        //            h2#headingFifteen.accordion-header
+        //                button.accordion-button.collapsed(type='button', data-bs-toggle='collapse', data-bs-target='#collapseFifteen', aria-expanded='false', aria-controls='collapseFifteen')
+        //                    | You didn't answer my question! ️
+        //            #collapseFifteen.accordion-collapse.collapse(aria-labelledby='headingFifteen', data-bs-parent='#accordionExample1')
+        //                .accordion-body
+        //                    |  Send it to us at&nbsp
+        //                    a.primary-link(href='mailto:info@ycphacks.io') info@ycphacks.io!
+
+    // Youtube Recap Videos
+    h1.display-5.text-center.mt-5  Recaps
+    .youtube.d-flex.justify-content-center.mx-3
+        iframe.videos.m-1(src='https://www.youtube.com/embed/Ru9zvWGSH8U', allow='fullscreen' aria-label='students')
+        iframe.videos.m-1(src='https://www.youtube.com/embed/k5A2QTasITs', allow='fullscreen' aria-label='2017-recap')
+
+    // Sponsor Carousel
+    h1.display-5.text-center.mt-5.sponsorSection Our Sponsors!
+    #carouselExampleAutoplaying.carousel.carousel-dark.slide(data-bs-ride='carousel')
+
+        .carousel-inner
+            .carousel-item.active
+                .carousel-item-container
+                    .dixie
+                        a.linkSponsor(href='https://www.standoutstickers.com/?utm_campaign=events-league-organizers-spring2022&utm_medium=email&utm_source=customerio-zoho_creator_-_standout_sticker_intro')
+                            img.img-fluid1.platinum.sponsorImage(src='/static/images/sponsors/stand-out-stickers-logo.png', alt='...')
+                    .dixie
+                        a.linkSponsor(href='https://www.bd.com/en-us')
+                            img.img-fluid1.platinum.sponsorImage(src='/static/images/sponsors/bd_logo.png', alt='BD')
+                    .dixie
+                        a.linkSponsor(href='https://mlh.io/seasons/2023/events')
+                            img.img-fluid1.platinum.sponsorImage(src='/static/images/sponsors/mlh-logo-color.svg', alt='Dataforma')
+            .carousel-item
+                .carousel-item-container
+                    .dixie
+                        a.linkSponsor(href='https://www.ycp.edu/about-us/offices-and-departments/student-development-and-campus-life/student-activities-and-orientation/esports/')
+                            img.img-fluid1.gold.sponsorImage(src='/static/images/sponsors/eSports.png', alt='eSports YCP')
+                    .dixie
+                        a.linkSponsor(href='https://www.dataforma.com/')
+                            img.img-fluid1.gold.sponsorImage(src='/static/images/sponsors/dataforma.png', alt='Dataforma')
+                    .dixie
+                        a.linkSponsor(href='https://www.wolfram.com/wolfram-one/')
+                            img.img-fluid1.gold.sponsorImage(src='/static/images/sponsors/wolframLang.png', alt='Wolfram Language')
+            .carousel-item
+                .carousel-item-container
+                    .dixie
+                        a.linkSponsor(href='https://www.pennwaste.com/')
+                            img.img-fluid1.sponsorImage.silver(src='/static/images/sponsors/pennWaste.png', alt='Penn Waste')
+                    .dixie
+                        a.linkSponsor(href='https://www.ycp.edu/academics/graham-school-of-business/')
+                            img.img-fluid1.sponsorImage.silver(src='/static/images/sponsors/grahamSchool.png', alt='Graham School of Business')
+                    .dixie
+                        a.linkSponsor(href='https://mrgcorp.com/')
+                            img.img-fluid1.sponsorImage.silver(src='/static/images/sponsors/mrg-labs-logo.png', alt='MRG Labs')
+        button.carousel-control-prev(type='button', data-bs-target='#carouselExampleAutoplaying', data-bs-slide='prev')
+            span.carousel-control-prev-icon(aria-hidden='true')
+            span.visually-hidden Previous
+        button.carousel-control-next(type='button', data-bs-target='#carouselExampleAutoplaying', data-bs-slide='next')
+            span.carousel-control-next-icon(aria-hidden='true')
+            span.visually-hidden Next
+
+    // Some more sponsor information
+    .text-center
+        #sponsorStuff.p.insides.my-4
+            //| Want to sponsor? Email us at INFO@YCPHacks.io
+            | Want to sponsor?&nbsp
+            a.link.text-decoration-none(href='mailto:INFO@YCPHacks.io') Email us&nbsp
+                i.fa-solid.fa-envelope
+            br
+            |  Check out what we have to offer to sponsors
+            a.link.text-decoration-none(href='https://www.youtube.com/watch?v=Vp7dTMmLmos&t=1s') Sponsor Video!
+            br
+            |  Our prospectus can be found
+            a.link.text-decoration-none(href='https://ycphacks.io/YCP_HACKS_SPONOSRSHIP_BROCHURE_2022_FINAL_FILE.pdf') here!
+
+        a.prospectus.text-decoration-none(href='sponsor') Learn more!
+        hr
+
+    .mt-3.text-center
+        h1 The Team
+        .d-flex.justify-content-around
+            .memberPhoto(style='background-image:url(/static/images/team/kayla.png);')
+                .memberContainer
+                    .memberTitle Kayla Hunt
+                    .memberLabel Frontend
+            .memberPhoto(style='background-image:url(/static/images/team/brady.png);')
+                .memberContainer
+                    .memberTitle Brady Carbaugh
+                    .memberLabel Frontend/Backend
+            .memberPhoto(style='background-image:url(/static/images/team/ralph.png);')
+                .memberContainer
+                    .memberTitle Ralph Greaves
+                    .memberLabel Backend
+            .memberPhoto(style='background-image:url(/static/images/team/josh.png);')
+                .memberContainer
+                    .memberTitle Josh Kopelcheck
+                    .memberLabel Backend
+
+
+            //TODO: add back later
+            //.planet
+            //    #spriteContainer
