--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -45,7 +45,7 @@ nav.navbar.navbar-expand-xl
                             li
                                 hr.dropdown-divider
                             li.nav-item
-                                a.navbarLink.nav-link(href='/login') Dashboard
+                                a.navbarLink.nav-link(href='/dashboard') Dashboard
                             |
                             li.nav-item
                                 a.navbarLink.nav-link(href='/logout') Log out
