--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -48,14 +48,14 @@ block main
                             th school
                             th major
 
-                    tbody
-                        each event_application of event_applications
-                            tr
-                                td= event_application.user_id
-                                td= event_application.created_at
-                                td= event_application.updated_at
-                                td= event_application.status
-                                td= event_application.age
-                                td= event_application.country
-                                td= event_application.school
-                                td= event_application.major
+                    //tbody
+                    //    each event_application of event_applications
+                    //        tr
+                    //            td= event_application.user_id
+                    //            td= event_application.created_at
+                    //            td= event_application.updated_at
+                    //            td= event_application.status
+                    //            td= event_application.age
+                    //            td= event_application.country
+                    //            td= event_application.school
+                    //            td= event_application.major
