--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -52,10 +52,10 @@ block main
                         each event_application of event_applications
                             tr
                                 td= event_application[0]
-                                td= event_application.created_at
-                                td= event_application.updated_at
-                                td= event_application.status
-                                td= event_application.age
-                                td= event_application.country
-                                td= event_application.school
-                                td= event_application.major
+                                td= event_application[1]
+                                td= event_application[2]
+                                td= event_application[3]
+                                td= event_application[4]
+                                td= event_application[5]
+                                td= event_application[6]
+                                td= event_application[7]
