--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -53,7 +53,7 @@ block main
                     each event_application of event_applications
                         tr
                             td
-                                a(href= '/' + event_application[0])= event_application[0]
+                                a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
                             td= event_application[1]
                             td= event_application[2]
                             td= event_application[3]
