--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -42,6 +42,7 @@ block main
             +application('Age')(value= event_application[0][4], for="age", id="age")
             +application('Country')(value= event_application[0][5], for="country", id="country")
             +application('Major')(value= event_application[0][7], for="major", id="major")
+            +application('Status')(value= event_application[0][3], for="status", id="status")
 
 
         .d-flex.justify-content-end
