--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -47,8 +47,8 @@ block main
 
         .d-flex.justify-content-end
             // TODO: add query params
-            if (event_application[0][3]  === 'accepted')
-                button.mx-1.btn.btn-success.disabled Accept
+            //if (event_application[0][3]  === 'accepted')
+            button.mx-1.btn.btn-success.disabled Accept
             else if (event_application[0][3]  === 'denied')
                 button.mx-1.btn.btn-danger.disabled Deny
             else if (event_application[0][3]  === 'waitlisted')
