--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -50,13 +50,13 @@ block main
         .d-flex.justify-content-end
             // TODO: add query params
             //if (event_application[0][3] === 'accepted')
-            button.mx-1.btn.btn-success.disabled Accept
+            button.mx-1.btn.btn-success Accept
             //if (event_application[0][3] === 'denied')
-            button.mx-1.btn.btn-danger.disabled Deny
+            button.mx-1.btn.btn-danger Deny
             //if (event_application[0][3] === 'waitlisted')
-            button.mx-1.btn.btn-warning.disabled Waitlist
+            button.mx-1.btn.btn-warning Waitlist
             //if (event_application[0][3] === 'flagged')
-            button.mx-1.btn.btn-secondary.disabled Flag
+            button.mx-1.btn.btn-secondary Flag
 
             button.mx-1.btn.btn-info(onclick=`edit()`) Edit
 
