--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -6,9 +6,9 @@ block main
         .d-flex.align-items-center.justify-content-center
             h2.px-2 Application Status
             // TODO: dynamically load badges
-            if (event_applicationID.status === 'accepted')
+            if (event_application.status === 'accepted')
                 span.badge.text-bg-success Accepted
-            else if (event_applicationID.status === 'undecided')
+            else if (event_application.status === 'undecided')
                 span.badge.text-bg-secondary Undecided
         hr
 
@@ -19,15 +19,17 @@ block main
                     .col-sm-6
                         input.form-control(type='text', readonly = '', id!=attributes.id value!=attributes.value)
         form#editing
-            +application('Name')(value=event_applicationID.name, for="name", id="name")
-            +application('Age')(value=event_applicationID.age, for="age", id="age")
-            +application('Country')(value=event_applicationID.country, for="country", id="country")
-            +application('Major')(value=event_applicationID.major, for="major", id="major")
+            //+application('Name')(value=event_application.name, for="name", id="name")
+            +application('Age')(value=event_application.age, for="age", id="age")
+            +application('Country')(value=event_application.country, for="country", id="country")
+            +application('Major')(value=event_application.major, for="major", id="major")
+            +application('School')(value=event_application.school, for="school", id="school")
+            +application('Education Level')(value=event_application.edu_lvl, for="edu_lvl", id="edu_lvl")
 
 
         .d-flex.justify-content-end
             // TODO: add query params
-            if (event_applicationID.status === 'accepted')
+            if (event_application.status === 'accepted')
                 button.mx-1.btn.btn-success.disabled Accept
             button.mx-1.btn.btn-danger Deny
             button.mx-1.btn.btn-warning Waitlist
