--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -5,7 +5,7 @@ footer.text-center.mt-3.text-light.py-3.insides(role='contentinfo')
     | &nbsp|&nbsp
     a.link-light(href='https://ycphacks.io/YCP_HACKS_SPONOSRSHIP_BROCHURE_2022_FINAL_FILE.pdf') Sponsor Us
     | &nbsp|&nbsp
-    a.link-light(href='info@ycphacks.io') Contact Us
+    a.link-light(href='mailto:info@ycphacks.io') Contact Us
     br
     a.fa.fa-twitter(href="https://twitter.com/YCPHacks" aria-label="Twitter" tabindex='-1')
 
