--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -13,8 +13,6 @@ nav.navbar.navbar-expand-xl
 
         #navbarTogglerDemo01.collapse.navbar-collapse
 
-
-
             ul.navbar-nav.me-auto.mb-2.mb-lg-0
                 li.nav-item
                     a.navbarLink.nav-link(href='gallery') Gallery
@@ -45,13 +43,13 @@ nav.navbar.navbar-expand-xl
                             li
                                 hr.dropdown-divider
                             li.nav-item
-                                a.navbarLink.nav-link(href='/login') Dashboard
+                                a.navbarLink.nav-link(href='/dashboard') Dashboard
                             |
                             li.nav-item
                                 a.navbarLink.nav-link(href='/logout') Log out
                 else
                     li.nav-item
-                        a.navbarLink.nav-link(href='/login') Log in
+                        a.navbarLink.nav-link(href='/dashboard') Log in
 
             .d-flex.d-none.d-xl-block
                 a#mlh-trust-badge(style='display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000', href='https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2023-season&utm_content=blue', target='_blank')
