--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -2,41 +2,32 @@ extends includes/dashboard_bar
 
 
 block main
-    p= userRoles
 
     if(userRoles.includes('Organizer'))
+        .display-5.m-2 Home
         .outside.bd-example.bd-example-cols.m-3
             .container.text-center
                 .row.row-cols-sm-2.row-cols-md-4.g-4.g-lg-4
-                    .col.text-decoration-none
-                        .p-3 Total Applicants
-                            span.badge.text-bg-secondary.m-1 0
-                    .col.text-decoration-none
-                        .p-3 RSVP&apos;d
-                            span.badge.text-bg-secondary.m-1 0
-                    .col.text-decoration-none
-                        .p-3 Hardware Checkouts
-                            span.badge.text-bg-secondary.m-1 0
-                    .col.text-decoration-none
-                        .p-3 Mentorship Requests
-                            span.badge.text-bg-secondary.m-1 0
-                    .col.text-decoration-none
-                        .p-3 Listed Events
-                            span.badge.text-bg-secondary.m-1 0
-                    .col.text-decoration-none
-                        .p-3 Listed Prizes
-                            span.badge.text-bg-secondary.m-1 0
-                    .col.text-decoration-none
-                        .p-3 Hardware Items
-                            span.badge.text-bg-secondary.m-1 0
-                    .col.text-decoration-none
-                        .p-3 Listed Projects
-                            span.badge.text-bg-secondary.m-1 0
-        .row.row-cols-1.row-cols-md-3.g-4.text-center.m-3
+
+                    mixin badges(title)
+                        .col.text-decoration-none
+                            .p-3= title
+                                span.badge.text-bg-secondary.m-1 0
+
+                    +badges('Total Applicants')
+                    +badges('RSVP&apos;d')
+                    +badges('Hardware Checkouts')
+                    +badges('Mentorship Requests')
+                    +badges('Listed Events')
+                    +badges('Listed Prizes')
+                    +badges('Hardware Items')
+                    +badges('Listed Projects')
+
+        .row.row-cols-1.row-cols-md-1.g-4.text-center.m-3
             .col
                 .card
                     .card-body
-                        h5.card-title Upcoming Events
+                        .display-6.card-title Upcoming Events
                         p.card-text
                             table.table
                                 thead
@@ -51,28 +42,28 @@ block main
                                         td Event 1
                                         td 12:00
                         a.btn.btn-secondary(href='#') View All
-            .col
-                .card
-                    .card-body
-                        h5.card-title Card title
-                        p.card-text
-                            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                        a.btn.btn-primary(href='#') Go somewhere
-            .col
-                .card
-                    .card-body
-                        h5.card-title Card title
-                        p.card-text
-                            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                        a.btn.btn-primary(href='#') Go somewhere
+            //.col
+            //    .card
+            //        .card-body
+            //            h5.card-title Card title
+            //            p.card-text
+            //                | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+            //            a.btn.btn-primary(href='#') Go somewhere
+            //.col
+            //    .card
+            //        .card-body
+            //            h5.card-title Card title
+            //            p.card-text
+            //                | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+            //            a.btn.btn-primary(href='#') Go somewhere
 
     else if (userRoles.includes('Attendee'))
-        h1.m-2 Home
+        .display-5.m-2 Home
         .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
             .col
                 .card.m-1
                     .card-body
-                        h2.card-title Check In
+                        .display-6.card-title Check In
                         hr
                         p.card-text
                             | QR Code
@@ -80,7 +71,7 @@ block main
             .col
                 .card.m-1
                     .card-body
-                        h2.card-title Upcoming Events
+                        .display-6.card-title Upcoming Events
                         hr
                         p.card-text
                             table.table
@@ -99,8 +90,8 @@ block main
             .col
                 .card.m-1
                     .card-body
-                        h2.card-title Discord Channel
+                        .display-6.card-title Discord Channel
                         hr
                         p.card-text
-                            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                            //| This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
                         a.btn.btn-primary(href='') Go to Discord Channel
